# Technical-Assignment-TechnoPark

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.local_dev/: docker-compose.storage.local.yml
docs/: tech_assignment.md
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/handlers/: __init__.py  products.py
src/api/v1/schemas/: __init__.py  products.py
src/config/: __init__.py  db.py
src/infra/: __init__.py
src/infra/database/: __init__.py  db.py
src/infra/database/migrations/: __init__.py  env.py  script.py.mako
src/infra/database/migrations/versions/: e907e1a5030c_add_new_table.py
src/infra/database/models/: __init__.py
src/infra/repositories/: __init__.py  products.py
src/shared/: __init__.py  converters.py  exceptions.py
src/shared/di/: __init__.py  container.py  injector.py
src/shared/interfaces/: __init__.py  db.py
src/shared/interfaces/repositories/: __init__.py  products.py
src/shared/interfaces/use_cases/: __init__.py  products.py
src/use_cases/: __init__.py  products.py
tests/units/api/: test_products_handler.py
tests/units/repositories/: test_calc_result_repository.py
tests/units/use_cases/: test_calculate_product_cost.py
